@@ -1,3 +1,4 @@
+- ask "Do you wish to use proprietary driver" before installing the needed packages
 - don't use 1280x1024 prefered resolution
   (using prefered resolution only when adding explicit gtf modelines)
 - handle new intel driver (including migration from "i810")
